tests/errors/bad-hex-digit/main.pa
# A hex literal with a non-hex digit.
def main = 0xZZ
